@@ -1,0 +1,2 @@
+constraints/and/maxprerounds = 0
+propagating/probing/maxprerounds = 0
