@@ -89,7 +89,10 @@ enum SYM_Consoptype
    SYM_CONSOPTYPE_PB_LINEAR   = 10,          /**< indicates linear conss in pseudoboolean conss */
    SYM_CONSOPTYPE_PB_SOFT     = 11,          /**< indicates pseudoboolean cons is soft constraint */
    SYM_CONSOPTYPE_PB_OBJ      = 12,          /**< indicates pseudoboolean cons is objective function */
-   SYM_CONSOPTYPE_LAST        = 13           /**< number of predefined enum types, needs to always
+   SYM_CONSOPTYPE_AND         = 13,          /**< encodes the AND-operator in AND-constraints */
+   SYM_CONSOPTYPE_OR          = 14,          /**< encodes the OR-operator in OR-constraints */
+   SYM_CONSOPTYPE_XORINT      = 15,          /**< encodes the internal variable in XOR-constraints */
+   SYM_CONSOPTYPE_LAST        = 16           /**< number of predefined enum types, needs to always
                                               *   hold the biggest value */
 };
 typedef enum SYM_Consoptype SYM_CONSOPTYPE;
