@@ -19,6 +19,7 @@ Fixed bugs
 - impose pseudoboolean cost bound without intermediate casting
 - flatten aggregation graph before finishing presolving to accelerate evaluating an empty solution
 - respect fixed resultants in binvarGetActiveProbindex() of branch_relpscost.c
+- corrected symmetry detection graph of cons_and.c, cons_or.c, and cons_xor.c
 
 Build system
 ------------
